<resources>
    <string name="app_name">Unobliviate</string>
    <string name="title_photo_note">Title Photo Note</string>
    <string name="save_button">Save Button</string>
    <string name="remember_button">Remember Button</string>
    <string name="share_button">Share Button</string>
    <string name="trash_button">Trash Button</string>
    <string name="photo_button">Photo Button</string>
    <string name="title_audio_note">Title Audio Note</string>
    <string name="audio_button">Audio Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_your_text_note">Add your text note</string>
    <string name="check_list_button">Check List Button</string>
    <string name="title_text_note">Title Text Note</string>
    <string name="notes">NOTES</string>
    <string name="play_button_description" />
    <string name="Audio_title" />
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="text">Text</string>
    <string name="element_text">Item text</string>
    <string name="fab_content_desc">button</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="registrar">Registrar</string>
    <string name="acceder">Acceder</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in_short">Password</string>
    <string name="photo">Photo</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="confirm">CONFIRM</string>
    <string name="we_will_send_you_an_email_to_recover_your_password">We will send you an email to recover your password</string>
    <string name="delete">Delete</string>
    <string name="sort">Sort</string>
    <string name="log_out">logOut</string>
    <string name="title_app">UNOBLIVIATE</string>
    <string name="nav_header_subtitle">STOP obliviating the important things</string>
    <string name="nav_header_desc">logo</string>
    <string name="title_activity_delete_note">DeleteNoteActivity</string>
    <string name="Delete">Delete</string>
    <string name="Cancel">Cancel</string>
    <string name="RememberMe">Remember Me</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="confirmation_to_continue">Are you sure you want to continue?</string>
    <string name="discard">Discard</string>
    <string name="what_do_you_want_to_do">What do you want to do ?</string>
    <string name="checkbox">false</string>
    <string name="Password" />
    <string name="username" />
</resources>