<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/text_note_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextTitleTextNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Add note text"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textShortMessage"
            android:text="@string/title_text_note" />

        <EditText
            android:id="@+id/editTextTextNote"
            android:layout_width="match_parent"
            android:layout_height="573dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textLongMessage|textMultiLine"
            android:text="@string/add_your_text_note" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/TextSaveButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#FFFFFF"
                android:contentDescription="@string/save_button"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/disquete" />

            <ImageButton
                android:id="@+id/TextCheckList"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#FFFFFF"
                android:contentDescription="@string/check_list_button"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/cl" />

            <ImageButton
                android:id="@+id/TextShareButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#FFFFFF"
                android:contentDescription="@string/share_button"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/image_2021_03_08t10_27_42_655z" />

            <ImageButton
                android:id="@+id/TextDeleteButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#FFFFFF"
                android:contentDescription="@string/trash_button"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/basura" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>