<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextAudioRecordedNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Title Audio Note"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textShortMessage"
            android:text="@string/title_audio_note" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="589dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/play_button"
                android:layout_width="80dp"
                android:layout_height="74dp"
                android:layout_gravity="center"
                android:contentDescription="@string/play_button_description"
                android:src="@android:drawable/ic_media_play" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/AudioSaveButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#FFFFFF"
                android:contentDescription="@string/save_button"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/disquete" />

            <ImageButton
                android:id="@+id/AudioRememberButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#FFFFFF"
                android:contentDescription="@string/remember_button"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/campana" />

            <ImageButton
                android:id="@+id/AudioShareButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#FFFFFF"
                android:contentDescription="@string/share_button"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/image_2021_03_08t10_27_42_655z" />

            <ImageButton
                android:id="@+id/AudioDeleteButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#FFFFFF"
                android:contentDescription="@string/trash_button"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/basura" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>