<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editPhotoTitleNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textShortMessage"
            android:text="@string/title_photo_note" />

        <ImageView
            android:id="@+id/Foto"
            android:layout_width="match_parent"
            android:layout_height="640dp"
            app:srcCompat="@android:drawable/ic_menu_crop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/PhotoSaveButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#FFFFFF"
                android:contentDescription="@string/save_button"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/disquete" />

            <ImageButton
                android:id="@+id/PhotoRememberButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#FFFFFF"
                android:contentDescription="@string/remember_button"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/campana" />

            <ImageButton
                android:id="@+id/PhotoShareButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#FFFFFF"
                android:contentDescription="@string/share_button"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/image_2021_03_08t10_27_42_655z" />

            <ImageButton
                android:id="@+id/PhotoDeleteButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#FFFFFF"
                android:contentDescription="@string/trash_button"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/basura" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>