<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextTitlePhotoNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textShortMessage"
            android:text="@string/title_photo_note" />

        <ImageButton
            android:id="@+id/photoDirectButton"
            android:layout_width="200dp"
            android:layout_height="573dp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:background="#FFFFFF"
            android:contentDescription="@string/photo_button"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/camara" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/photoDeleteButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#FFFFFF"
                android:contentDescription="@string/trash_button"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/basura" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>