<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:foreground="?attr/selectableItemBackground"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginStart="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="#FFFFFF"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/tex" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/titleView"
                    android:layout_width="175dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:text="@string/title" />

                <TextView
                    android:id="@+id/dateView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:text="@string/date" />
            </LinearLayout>

            <TextView
                android:id="@+id/typeView"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:text="@string/text" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>